BUGFIX: make modal dialogs only show scrollbar if needed

--- a/packages/react-ui-components/src/Dialog/style.css
+++ b/packages/react-ui-components/src/Dialog/style.css
@@ -41,7 +41,7 @@
 }
 .dialog__body {
     max-height: calc(65vh);
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 .dialog__actions {
     composes: reset from './../reset.css';
